[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/MeleeRobot/melee_robot_walk.png" type="Texture" id=1]
[ext_resource path="res://Enemies/MeleeRobot/MeleeRobot.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 55.945, 58.5236 )

[sub_resource type="CircleShape2D" id=9]
radius = 800.0

[node name="MeleeRobot" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -5, 0 )
shape = SubResource( 8 )

[node name="EngageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape2D" parent="EngageArea"]
visible = false
shape = SubResource( 9 )

[node name="RayCast" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 850, 0 )
collision_mask = 2147483665
[connection signal="body_entered" from="EngageArea" to="." method="_on_EngageArea_body_entered"]
[connection signal="body_exited" from="EngageArea" to="." method="_on_EngageArea_body_exited"]
